force-app/main/default/objects/public_packagingreviews__x/public_packagingreviews__x.object-meta.xml
<CustomObject>
    <description>public$packagingreviews</description>
    <externalDataSource>odata_badges</externalDataSource>
    <externalName>public$packagingreviews</externalName>
    <label>public$packagingreviews</label>
    <pluralLabel>public$packagingreviews</pluralLabel>
</CustomObject>