force-app/main/default/objects/public_packagingreviews__x/fields/brandevaluated__c.field-meta.xml
<CustomField>
    <fullName>brandevaluated__c</fullName>
    <description>brandevaluated</description>
    <externalDeveloperName>brandevaluated</externalDeveloperName>
    <label>brandevaluated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>