force-app/main/default/objects/public_packagingreviews__x/fields/freetext__c.field-meta.xml
<CustomField>
    <fullName>freetext__c</fullName>
    <description>freetext</description>
    <externalDeveloperName>freetext</externalDeveloperName>
    <label>freetext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>