force-app/main/default/objects/public_packagingreviews__x/fields/gripreview__c.field-meta.xml
<CustomField>
    <fullName>gripreview__c</fullName>
    <description>gripreview</description>
    <externalDeveloperName>gripreview</externalDeveloperName>
    <label>gripreview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>