force-app/main/default/objects/public_packagingreviews__x/fields/image_url__c.field-meta.xml
<CustomField>
    <fullName>image_url__c</fullName>
    <description>image_url</description>
    <externalDeveloperName>image_url</externalDeveloperName>
    <label>image_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>