force-app/main/default/objects/public_packagingreviews__x/fields/participantemail__c.field-meta.xml
<CustomField>
    <fullName>participantemail__c</fullName>
    <description>participantemail</description>
    <externalDeveloperName>participantemail</externalDeveloperName>
    <label>participantemail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>