force-app/main/default/objects/public_packagingreviews__x/fields/participantname__c.field-meta.xml
<CustomField>
    <fullName>participantname__c</fullName>
    <description>participantname</description>
    <externalDeveloperName>participantname</externalDeveloperName>
    <label>participantname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>