force-app/main/default/objects/public_packagingreviews__x/fields/plugreview__c.field-meta.xml
<CustomField>
    <fullName>plugreview__c</fullName>
    <description>plugreview</description>
    <externalDeveloperName>plugreview</externalDeveloperName>
    <label>plugreview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>