force-app/main/default/objects/public_packagingreviews__x/fields/portabilityreview__c.field-meta.xml
<CustomField>
    <fullName>portabilityreview__c</fullName>
    <description>portabilityreview</description>
    <externalDeveloperName>portabilityreview</externalDeveloperName>
    <label>portabilityreview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>