force-app/main/default/objects/public_packagingreviews__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>brandevaluated__c</columns>
    <columns>creation_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>